Hotfix v1.1